# docapi

./: .gitignore  README.md  README_en.md  README_zh.md  USAGE.md  USAGE_en.md  USAGE_zh.md  pyproject.toml  requirements.txt  setup.py
docapi/: config.yaml  docapi.py  main.py
docapi/llm/: azure_openai_llm.py  base_llm.py  llm_builder.py  openai_llm.py
docapi/prompt/: api_template.md  doc_prompt.py
docapi/scanner/: django_scanner.py  flask_scanner.py
test/: config.yaml  flask_server.py  sub_api.py  test.ipynb  test.py
test/django_project/: db.sqlite3
test/django_project/django_project/: settings.py  urls.py
test/django_project/docs/: doc.json  index.md  students-views.md  students-views.py.md  web.yaml
test/django_project/students/: admin.py  models.py  urls.py  views.py
test/django_project/students/migrations/: 0001_initial.py
test/docs/: flask_server.md  sub_api.md
test/flask_project/: flask_api.py  flask_server.py  server.py
test/flask_project/docs/: doc.json  flask_api.md  flask_project-server.md  flask_project-sub_api.md  flask_server.md  index.md  server.md  sub_api.md  web.yaml
